add page loader, not found page,add translations

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,3 +1,5 @@
 {
-    "language": "En"
+    "language": "En",
+    "pageNotFound": "Страница не найдена, 404",
+    "returnToMainPage": "На главную страницу"
 }
