--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,7 @@
 {
     "language": "Ru",
     "pageNotFound": "Page not found, 404",
-    "returnToMainPage": "Main Page"
+    "returnToMainPage": "Main Page",
+    "pageErrorMessage": "Something went wrong, please try again and reload the page.",
+    "reloadPage": "Reload page"
 }
